--- a/website/index.css
+++ b/website/index.css
@@ -55,6 +55,28 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    position: relative;
+}
+
+#courseActionButton {
+    background: none;
+    border: none;
+}
+
+#courseActionButtonDown {
+    position: absolute;
+    right: 0;
+    background: transparent;
+    border: none;
+    display: none;
+}
+
+#course-vid1 {
+    display: none;
+}
+
+#course-vid2 {
+    display: none;
 }
 
 .header {
@@ -65,9 +87,11 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 12;
     padding: 10px;
     border-bottom: 1px solid #F4A79F;
     height: 64px;
+    background: white;
 }
 
 .menu-icon-container {
@@ -187,4 +211,219 @@ span.eyeglass {
     font-size: 20px;
     border-radius: 15px;
     margin-top: 10px;
+}
+
+.info-sec-3 {
+    margin-top: 70px;
+    padding: 10px;
+}
+
+.info-sec-3 h4 {
+    font-size: 32px;
+    text-align: center;
+}
+
+.homework-help {
+    border: 1px solid black;
+    border-radius: 15px;
+    text-align: center;
+    width: 365px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.homework-help img { 
+    width: 170px;
+    height: 170px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.homework-help h4 {
+    margin-bottom: 10px;
+}
+
+.homework-help p {
+    margin-bottom: 10px;
+}
+
+.homework-help a {
+    display: inline-block;
+    margin-bottom: 25px;
+}
+
+.exam-prep-and-practice {
+    border: 1px solid black;
+    border-radius: 15px;
+    text-align: center;
+    width: 365px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+
+.exam-prep-and-practice img {
+    width: 170px;
+    height: 197px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.exam-prep-and-practice h4 {
+    margin-bottom: 10px;
+}
+
+.exam-prep-and-practice p {
+    margin-bottom: 10px;
+}
+
+.exam-prep-and-practice a {
+    display: inline-block;
+    margin-bottom: 25px;
+}
+
+.understand-a-topic {
+    border: 1px solid black;
+    border-radius: 15px;
+    text-align: center;
+    width: 365px;
+    margin: auto;
+}
+
+.understand-a-topic img {
+    width: 170px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.understand-a-topic h4 {
+    margin-bottom: 10px;
+}
+
+.understand-a-topic p {
+    margin-bottom: 10px;
+}
+
+.understand-a-topic a {
+    display: inline-block;
+    margin-bottom: 25px;
+}
+
+.info-sec-4 {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.info-sec-4 p {
+    font-size: 32px;
+}
+
+.info-sec-4 a {
+    display: inline-block;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-decoration: none;
+    color: white;
+    padding: 4px 14px;
+    background: #374674;
+    border-radius: 15px;
+    font-size: 20px;
+}
+
+.footer-1 {
+    padding: 10px;
+}
+
+.pre-footer-section-info {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin-top:20px;
+    border-top: 1px solid black
+}
+
+.pre-footer-section-button {
+    background: transparent;
+    border: none;
+}
+
+.pre-f-s-b-less {
+    position: absolute;
+    right: 0;
+    background: transparent;
+    border: none;
+}
+
+.pre-f-s-b-less2 {
+    position: absolute;
+    right: 0;
+    background: transparent;
+    border: none;
+}
+
+#c_f_i {
+    background: #F5F5F5;
+    display: none;
+}
+
+#c_f_i p {
+    padding: 8px;
+}
+
+#c_s_i {
+    background: #F5F5F5;
+    display: none;
+}
+
+#c_s_i p {
+    padding: 8px;
+}
+
+
+/*STYLE FOOTER BUTTONS HERE*/
+#pref_s_b_less {
+    display: none;
+}
+
+
+#pref-f-s-b-lessTwo {
+    display: none;
+}
+
+.footer {
+    margin-top: 30px;
+    background: #F5F5F5;
+    overflow: hidden;
+}
+
+.last {
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    grid-template-rows: repeat(2, 50px);
+    width: 380px;
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: auto;
+    font-size: 12px;
+    background: #F5F5F5;
+}
+
+.las_las {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.copyright-info {
+    text-align: center;
+    font-size: 12px;
+    font-weight: bolder;
+    margin-top: 30px;
+    background: #F5F5F5;
+}
+
+.copyright-info p {
+    margin-bottom: 30px;
 }
